<resources>
    <string name="app_name" translatable="false">FoodFinder 1.1</string>
    <string name="email_button">Continue with E-mail</string>
    <string name="facebook_button">Continue with Facebook</string>
    <string name="google_button">Continue with Google</string>
    <string name="changeLanguage">Change language</string>
    <string name="english_name" translatable="false">English</string>
    <string name="bulgarian_name" translatable="false">Български</string>
    <string name="edit_restaurant_status">Edit Restaurant status</string>
    <string name="status">Status</string>
    <string name="note">Note</string>
    <string name="continue_button">Continue</string>
    <string name="store_information">Store information</string>
    <string name="address">Address</string>
    <string name="contacts">Contacts</string>
    <string name="choose_address">Choose address</string>
    <string name="choose_address_subtitle">The location of your establishment</string>
    <string name="select_location_from_map">Select location from map \n</string>
    <string name="payment_method">Payment method</string>
    <string name="in_cash">In Cash</string>
    <string name="with_card">With card</string>
    <string name="profile_type">Profile type</string>
    <string name="profile_type_subtitle">What type of user are you?</string>
    <string name="customer">Customer</string>
    <string name="review_and_order_food">Review and order food</string>
    <string name="business">Business</string>
    <string name="offer_and_sell_meals_to_customers">Offer and sell meals to customers</string>
    <string name="confirm_order">Confirm order</string>
    <string name="deliver_to">Deliver to</string>
    <string name="edit">Edit</string>
    <string name="sub_total">Sub-total</string>
    <string name="delivery">Delivery</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="edit_profile_info">Edit Profile Info</string>
    <string name="name">Name</string>
    <string name="food_type">Food type</string>
    <string name="price_range">Price range</string>
    <string name="cheap">Cheap</string>
    <string name="medium">Medium</string>
    <string name="expensive">Expensive</string>
    <string name="profile_picture">Profile picture</string>
    <string name="upload_photo">Upload photo</string>
    <string name="change_location">Change location</string>
    <string name="enter_e_mail">Enter E-mail</string>
    <string name="enter_email_subtitle">We\'ll check if you already have an account. If not we will create one for you.</string>
    <string name="e_mail">E-mail</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_name_subtitle">This name will be showed on your orders and reviews</string>
    <string name="enter_password">Enter Password</string>
    <string name="password_requirements">The password must contain:</string>
    <string name="password">Password</string>
    <string name="food_types">Food types</string>
    <string name="search_here">Search Here</string>
    <string name="meal_info">Meal info</string>
    <string name="meal_info_subtitle">Define your new meal\'s characteristics</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="add_promotion">Add promotion</string>
    <string name="photo">Photo</string>
    <string name="new_business_title">Fill some essential data for your business</string>
    <string name="new_business_subtitle">This data will be seen by customers when they review your profile</string>
    <string name="order_details">Order details</string>
    <string name="promotions">Promotions</string>
    <string name="menu">Menu</string>
    <string name="menu_empty">No meals added to the menu yet</string>
    <string name="restaurant_registration_complete">Restaurant registration complete!</string>
    <string name="you_can_begin_to_fill_out_your_menu">You can begin to fill out your menu</string>
    <string name="statuses">Statuses</string>
    <string name="order_successful">Order successful!</string>
    <string name="you_will_receive_an_email_with_more_details_regarding_your_order">You will receive an email with more details regarding your order.</string>
    <string name="upload_store_photo">Upload store photo</string>
    <string name="upload_store_photo_subtitle">The first thing that the users will see about you</string>
    <string name="from_gallery">From gallery</string>
    <string name="take_photo">Take photo</string>
    <string name="chosen_cover_photo">Chosen cover photo</string>
    <string name="chosen_photo_subtitle">This is what customers will first see about you</string>
    <string name="choose_another">Choose another</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="registered">Registered</string>
    <string name="approved">Approved</string>
    <string name="hidden">Hidden</string>
    <string name="apply_filter">Apply filter</string>
    <string name="clear_filter">Clear filter</string>
    <string name="card_number">Card number</string>
    <string name="number">Number</string>
    <string name="confirm">Confirm</string>
    <string name="restaurants">Restaurants</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change language</string>
    <string name="log_out">Log out</string>
    <string name="users">Users</string>
    <string name="add_new">Add new</string>
    <string name="favorites">Favorites</string>
    <string name="explore">Explore</string>
    <string name="about_us">About us</string>
    <string name="help_and_support">Help and support</string>
    <string name="orders">Orders</string>
    <string name="reviews">Reviews</string>
    <string name="promotion">Promotion</string>
    <string name="percent">Percent</string>
    <string name="two_for_one">Two for one</string>
    <string name="remove_promotion">Remove promotion</string>
    <string name="welcome_back">Welcome back</string>
    <string name="enter_password_to_continue">Enter password to continue</string>
    <string name="lev">lv.</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="your_profile_is_ready_to_use">Your profile is ready to use</string>
    <string name="successfully_registered_restaurant">Successfully registered user!</string>
    <string name="business_registration_successful_subtitle">As a business, you need to enter some data such as cover photo, food type and location, that the customers will see.</string>
    <string name="rating">rating</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="problem_with_request">Problem with request</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="the_name_that_clients_will_see_along_with_your_profile_picture_in_the_explore_screen">The name that clients will see along with your profile picture in the explore screen</string>
    <string name="owner">Owner</string>
    <string name="admin">Admin</string>
    <string name="your_profile_has_been_hidden">Your profile has been hidden.</string>
    <string name="reason_please_contact_support_for_more_information">Reason: %1$s\n Please contact support for more information.</string>
    <string name="your_profile_has_not_yet_been_approved_so_it_won_t_be_shown_to_customers">Your profile has not yet been approved, so it won\'t be shown to customers.</string>
    <string name="if_more_than_2_days_have_passed_since_registration_please_contact_support_for_more_information">If more than 2 days have passed since registration, please contact support for more information.</string>
    <string name="invalid_email">Invalid email</string>
    <string name="capital_letters">Capital letters</string>
    <string name="small_letters">Small letters</string>
    <string name="special_symbols">Special symbols</string>
    <string name="digits">Digits</string>
    <string name="at_least_symbols">At least %1$s symbols</string>
    <string name="invalid_password">Invalid password</string>
    <string name="the_username_must_be_at_least_symbols_long">The username must be at least %1$s symbols long</string>
    <string name="no_orders_found">No orders found</string>
    <string name="you_must_choose_food_type_before_continuing">You must choose food type before continuing</string>
    <string name="meal_name_must_be_at_least_symbols_long">Name must be at least %1$s symbols long</string>
    <string name="meal_description_must_be_at_least_symbols_long">Meal description must be at least %1$s symbols long</string>
    <string name="the_price_cannot_be_zero">The price cannot be zero</string>
    <string name="edit_promotion">Edit promotion</string>
    <string name="meal_deleted">Meal deleted</string>
    <string name="are_you_sure_this_action_will_hide_the_current_meal_from_your_customers">Are you sure? This action will hide the current meal from your customers</string>
    <string name="are_you_sure_this_action_will_show_the_current_meals_to_your_customers">Are you sure? This action will show the current meals to your customers</string>
    <string name="upload_error">Upload error: %1$s</string>
    <string name="invalid_percent">Invalid percent</string>
    <string name="you_must_choose_address_before_continuing">You must choose address before continuing</string>
    <string name="no_photo_uploaded">No photo uploaded</string>
    <string name="order_for_price">Order %1$s for %2$s %3$s</string>
    <string name="are_you_sure_you_want_to_remove_this_meal_out_of_your_order">Are you sure you want to remove this meal out of your order?</string>
    <string name="card">Card: %1$s **** **** ****</string>
    <string name="invalid_card_number">Invalid card number</string>
    <string name="upload_new_photo">Upload new photo</string>
    <string name="phone_number">Phone number</string>
    <string name="no_phone_number_entered">No phone number entered</string>
    <string name="explore_title">Explore</string>
    <string name="find_your_favorite_food">Find your favorite food</string>
    <string name="profile">Profile</string>
    <string name="no_restaurants_matching_filter">No restaurants matching filter</string>
    <string name="leave_a_review">Leave a review</string>
    <string name="feedback">Feedback</string>
    <string name="no_reviews_found">No reviews found</string>
    <string name="active_orders">Active orders</string>
    <string name="no_feedback_given">No feedback given</string>
    <string name="total_spent_lv">Total spent: %1$s lv.</string>
    <string name="average">Average: %1$s</string>
    <string name="orders_small">orders</string>
    <string name="restaurant_deleted">Restaurant deleted</string>
    <string name="user_deleted">User deleted</string>
    <string name="no_users_matching_filter">No users matching filter</string>
    <string name="are_you_sure_you_want_to_delete_this_user">Are you sure you want to delete this user?</string>
    <string name="no_active_orders_found">No active orders found</string>
    <string name="contacts_double">Contacts:</string>
    <string name="developed_by_stefan_genev">Developed by Stefan Genev</string>
    <string name="choose_a_location_where_the_food_will_be_delivered">Choose a location from the map \n</string>
    <string name="name_in_bulgarian">Bulgarian name</string>
    <string name="name_in_english">English name</string>
    <string name="food_type_data">Food type data</string>
    <string name="food_type_deleted">Food type deleted</string>
    <string name="food_type_name_must_be_at_least_symbols_long">Name must be at least %1$s symbols long</string>
</resources>