<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.EnterPasswordActivity">

    <ImageView
        android:id="@+id/pattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/food_pattern_diagonal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pattern2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/food_pattern_diagonal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:onClick="onGoBack"
        android:scaleType="center"
        app:backgroundTint="@color/light_salva"
        app:fabCustomSize="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="18dp"
        app:srcCompat="@drawable/back"
        app:tint="@color/salva" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/floating_action_button">

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bentonsans"
            android:text="@string/enter_password"
            android:textAlignment="textStart"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/bentonsanslight"
            android:text="@string/enter_password_to_continue"
            android:textAlignment="textStart"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <com.example.foodfinder11.views.BaseInputLayout
                android:id="@+id/passwordInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:counterMaxLength="32"
                app:endIconMode="password_toggle">

                <com.example.foodfinder11.views.BaseEditText
                    android:id="@+id/passwordTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="32" />

            </com.example.foodfinder11.views.BaseInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/requirementsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/requirements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/bentonsansmedium"
                android:text="@string/password_requirements"
                android:textAlignment="textStart"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/requirementOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableStart="@drawable/square"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/bentonsanslight"
                android:gravity="center_vertical"
                android:text="@string/capital_letters"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/requirementTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableStart="@drawable/square"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/bentonsanslight"
                android:gravity="center_vertical"
                android:text="@string/small_letters"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/requirementThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableStart="@drawable/square"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/bentonsanslight"
                android:gravity="center_vertical"
                android:text="@string/digits"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/requirementFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableStart="@drawable/square"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/bentonsanslight"
                android:gravity="center_vertical"
                android:text="@string/special_symbols"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/requirementFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableStart="@drawable/square"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/bentonsanslight"
                android:gravity="center_vertical"
                android:text="@string/at_least_symbols"
                android:textSize="16dp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/continueButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fontFamily="@font/bentonsansmedium"
        android:onClick="onContinue"
        android:text="@string/continue_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/forest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>